<resources>
    <string name="app_name">Kpop</string>
    <string name="my_name">Chiryl Malik Izzuddin</string>
    <string name="my_email">chirylmalik0@gmail.com</string>
    <string name="group_name">Nama Grup</string>
    <string name="description">Deskripsi</string>
    <string name="list">List</string>
    <string name="head_history">Sejarah</string>
    <string name="head_member">Anggota</string>
    <string name="member">Member</string>
    <string name="profile_icon">Profile</string>
    <string name="back_icon">Back</string>
    <string name="title_main">Kpop</string>
    <string name="title_detail">Detail</string>
    <string name="title_about_page">About Page</string>
    <string-array name="data_kpop">
        <item>aespa</item>
        <item>(G)I-DLE</item>
        <item>ITZY</item>
        <item>IVE</item>
        <item>LE SSERAFIM</item>
        <item>NMIXX</item>
        <item>QWER</item>
        <item>Red Velvet</item>
        <item>STAYC</item>
        <item>TWICE</item>
    </string-array>
    <string-array name="data_description">
        <item>Aespa adalah girl grup asal Korea Selatan yang dibentuk oleh SM Entertainment. Grup ini terdiri dari empat anggota: Karina, Giselle, Winter dan Ningning. Mereka melakukan debut pada 17 November 2020 dengan single "Black Mamba".</item>
        <item>(G)I-dle adalah girlband Korea Selatan yang dibentuk oleh Cube Entertainment pada tahun 2018. Grup ini terdiri dari lima anggota: Miyeon, Minnie, Soyeon, Yuqi, dan Shuhua. Awalnya ada 6 orang, tapi Soojin meninggalkan grup pada 14 Agustus 2021. Mereka memulai debut pada 2 Mei 2018 dengan album mini pertama berjudul I Am.</item>
        <item>Itzy adalah grup musik perempuan besutan JYP Entertainment dengan anggota 5 orang, yaitu Hwang Ye-ji, Choi Ji-su, Shin Ryu-jin, Lee Chae-ryeong, dan Shin Yu-na. Grup ini debut pada 12 Februari 2019, dengan dirilisnya singel berjudul It\'z Different.</item>
        <item>Ive adalah grup idola wanita dari Korea Selatan yang dibentuk oleh Starship Entertainment pada tahun 2021. Grup ini ini terdiri dari enam anggota yaitu Gaeul, Yujin, Rei, Wonyoung, Liz, Leeseo. Mereka debut pada 1 Desember 2021 dengan single album "Eleven".</item>
        <item>Le Sserafim adalah grup vokal wanita pertama hasil kolaborasi Source Music dan Hybe Corporation. Grup ini beranggotakan 5 orang, yaitu Sakura, Chae-won, Yun-jin, Kazuha, dan Eun-chae. Le Sserafim debut dengan album mini pertama "Fearless" dengan judul lagu yang sama pada 2 Mei 2022.</item>
        <item>NMIXX adalah grup vokal wanita yang beranggotakan enam orang yakni: Lily, Haewon, Sullyoon, Bae, Jiwoo, dan Kyujin. Grup ini dibentuk oleh agensi asal Korea Selatan, JYP Entertainment. NMIXX debut secara resmi pada 22 Februari 2022, dengan album single bertajuk "Ad Mare".</item>
        <item>QWER adalah girl band Korea Selatan di bawah 3Y Corporation dan Tamago Production. Mereka debut pada 18 Oktober 2023 dengan single album Harmony from Discord.</item>
        <item>Red Velvet adalah grup vokal perempuan Korea Selatan yang dibentuk oleh SM Entertainment pada tahun 2014 dan terdiri dari lima anggota, yaitu Irene, Seulgi, Wendy, Joy, dan Yeri. Mereka memulai karier pada 1 Agustus 2014 dengan merilis single digital "Happiness (Kebahagiaan)" dengan formasi awal 4 anggota, Irene, Seulgi, Wendy, dan Joy. Pada Maret 2015, Red Velvet memiliki satu anggota baru yaitu Yeri. Nama Red Velvet memiliki gabungan arti, yaitu red (merah) melambangkan warna yang menyala serta bergairah, dan velvet (sutra) melambangkan citra feminin dan lembut. Dualitas ini tercermin dalam musik dan konsep mereka.</item>
        <item>STAYC adalah grup vokal wanita asal Korea Selatan yang dibentuk oleh High Up Entertainment. Grup ini terdiri dari enam anggota: Sumin, Sieun, Isa, Seeun, Yoon, dan J. Grup ini memulai debut pada tanggal 12 November 2020, dengan merilis album singel debut mereka, Star to a Young Culture</item>
        <item>Twice adalah girl grup Korea Selatan yang dibentuk oleh JYP Entertainment. Grup ini terdiri dari sembilan anggota: Nayeon, Jeongyeon, Momo, Sana, Jihyo, Mina, Dahyun, Chaeyoung, dan Tzuyu.</item>
    </string-array>
    <string-array name="data_photo">
        <item>@drawable/aespa</item>
        <item>@drawable/gidle</item>
        <item>@drawable/itzy</item>
        <item>@drawable/ive</item>
        <item>@drawable/le_sserafim</item>
        <item>@drawable/nmixx</item>
        <item>@drawable/qwer</item>
        <item>@drawable/red_velvet</item>
        <item>@drawable/stayc</item>
        <item>@drawable/twice</item>
    </string-array>
</resources>